pkg/cmd/kurel/testdata/httproute-filters-redirect/expected.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shlink
    launcher.gokure.dev/component: shlink
  name: shlink
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shlink
  strategy: {}
  template:
    metadata:
      labels:
        app: shlink
        launcher.gokure.dev/component: shlink
    spec:
      containers:
      - image: shlinkio/shlink:4.3
        name: shlink
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          limits:
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
      serviceAccountName: shlink
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: shlink
    launcher.gokure.dev/component: shlink
  name: shlink
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: shlink
  type: ClusterIP
---
apiVersion: v1
automountServiceAccountToken: false
kind: ServiceAccount
metadata:
  labels:
    app: shlink
    launcher.gokure.dev/component: shlink
  name: shlink
  namespace: default
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: shlink
    launcher.gokure.dev/component: shlink
  name: shlink-httproute
  namespace: default
spec:
  hostnames:
  - short.example.com
  parentRefs:
  - name: public-gateway
    namespace: gateway-system
  rules:
  - backendRefs:
    - name: shlink
      port: 80
    filters:
    - requestRedirect:
        scheme: https
        statusCode: 308
      type: RequestRedirect
    matches:
    - path:
        type: PathPrefix
        value: /
